src/styles.css
.opened_modal {
  overflow: hidden;
}

.mask {
  opacity: 0;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.2);
  transition: opacity 0.2s ease-out;
}

.mask.active {
  opacity: 1;
}

.modal {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 10000;
}

.modal_body {
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  z-index: 10100;
  width: auto;
  max-width: calc(100% - 40px);
  background-color: #fff;
  box-shadow: 0 2px 6px 1px rgba(100, 100, 100, 0.2);
  transform: translate(-50%, -50%);
  transition: opacity 0.2s ease-out;
}

.active .modal_body {
  opacity: 1;
}

.overflow_body {
  overflow-x: hidden;
  overflow-y: auto;
}
.overflow_body .modal_body {
  top: 0;
  margin: 50px auto;
  transform: translate(-50%, 0);
}

.content {
  padding: 50px 40px;
}

.title {
  display: block;
  padding: 30px 40px 0;
  font-style: normal;
  font-size: 20px;
  word-break: break-all;
}

.title ~ .close_button {
  top: 15px;
  right: 15px;
}

.close_button {
  position: absolute;
  top: 0;
  right: 0;
  width: 46px;
  height: 46px;
  padding: 0;
  border: 0;
  outline: 0;
  background-color: transparent;
  cursor: pointer;
}

.close_button:before,
.close_button:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 20px;
  height: 2px;
  background-color: #888;
  border-radius: 3px;
  transform-origin: 50% 50%;
  transition: width .2s, background-color 0.2s;
}

.close_button:hover:before,
.close_button:hover:after {
  background-color: #333;
}

.close_button:active:before,
.close_button:active:after {
  width: 18px;
}

.close_button:before {
  transform: translate(-50%, -50%) rotate(45deg);
}

.close_button:after {
  transform: translate(-50%, -50%) rotate(-45deg);
}

